# perturblib

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: check_environment.yml  deploy_website.yml
docs/: render.sh
docs/source/: API.rst  conf.py  contributing.rst  gym.rst  index.rst  installation.rst  introduction.rst  tutorials.rst
docs/source/_static/: custom.css
docs/source/_templates/: classtemplate.rst  functiontemplate.rst
docs/source/api/: perturb_lib.InMemoryPlibData.rst  perturb_lib.ModelMixin.rst  perturb_lib.OnDiskPlibData.rst  perturb_lib.PlibData.rst  perturb_lib.PlibEvaluatorMixin.rst  perturb_lib.SklearnModel.rst  perturb_lib.describe_context.rst  perturb_lib.describe_embedding.rst  perturb_lib.describe_evaluator.rst  perturb_lib.describe_model.rst  perturb_lib.evaluators.collection.standard_ones.MAE.rst  perturb_lib.evaluators.collection.standard_ones.Pearson.rst  perturb_lib.evaluators.collection.standard_ones.R2.rst  perturb_lib.evaluators.collection.standard_ones.RMSE.rst  perturb_lib.list_contexts.rst  perturb_lib.list_embeddings.rst  perturb_lib.list_evaluators.rst  perturb_lib.list_models.rst  perturb_lib.load_anndata.rst  perturb_lib.load_embedding.rst  perturb_lib.load_evaluator.rst  perturb_lib.load_model.rst  perturb_lib.load_plibdata.rst  perturb_lib.load_trained_model.rst  perturb_lib.models.collection.baselines.Catboost.rst  perturb_lib.models.collection.baselines.GlobalMean.rst  perturb_lib.models.collection.baselines.NoPerturb.rst  perturb_lib.models.collection.baselines.ReadoutMean.rst  perturb_lib.models.collection.lpm.LPM.rst  perturb_lib.register_context.rst  perturb_lib.register_embedding.rst  perturb_lib.register_evaluator.rst  perturb_lib.register_model.rst  perturb_lib.save_trained_model.rst  perturb_lib.split_plibdata_2fold.rst  perturb_lib.split_plibdata_3fold.rst
docs/source/notebook_tutorials/: 00_getting_started.ipynb  01_data.ipynb  02_models.ipynb  03_evaluators.ipynb
perturb_gym/: __init__.py  evaluation.py  paths.py  training.py  utils.py
perturb_gym/configs/: access.py  base.py
perturb_gym/configs/collection/: lincs_paper_lpm.yaml  replogle_k562_paper_lpm.yaml  replogle_rpe1_paper_lpm.yaml
perturb_lib/: __init__.py  _utils.py  environment.py  utils.py
perturb_lib/data/: __init__.py  access.py  plibdata.py  preprocesing.py  utils.py
perturb_lib/data/collection/: dummy.py  horlbeck18.py  lincs.py  replogle22.py
perturb_lib/embeddings/: __init__.py  _utils.py  access.py
perturb_lib/embeddings/collection/: achilles.py  dummy.py  gene2vec.py  pathway_embedding.py  string.py
perturb_lib/evaluators/: access.py  base.py
perturb_lib/evaluators/collection/: standard_ones.py
perturb_lib/models/: _utils.py  access.py  base.py
perturb_lib/models/collection/: __init__.py  baselines.py  lpm.py
tests/: conftest.py  embedding_benchmark.py  io_benchmarks.py  test_embeddings.py  test_hello_world.py  test_model_operations.py  test_module_registration.py  test_plibdata.py  test_shuffle_buffer.py  test_vocabulary.py
tests/fixtures/: data.py  logger.py
